# multi-agents

./: README.md  main.py  pyproject.toml
src/: doc_team.py  research_team.py  tools.py  utils.py
