[project]
name = "complex-agents"
version = "0.1.0"
description = "A mutli-agent workflow to complete a research task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.7.0",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.0.42",
    "langchain-ollama>=1.0.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.2",
    "langgraph-supervisor>=0.0.30",
]
